Fix vertical alignment issue.

--- a/views/src/components/Comment/style.scss
+++ b/views/src/components/Comment/style.scss
@@ -17,6 +17,7 @@
       background-color: #000;
       border: none;
       color: #fff;
+      line-height: 16px;
     }
   }
 
